Sun Jun 06 11:55:33 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/queryparser.cc: Remove unused inclusion of "omdebug.h".

Thu Jun 03 10:36:56 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/localmatch.cc,matcher/multimatch.cc,matcher/rset.cc: Add
	  missing explicit inclusions of "omassert.h".

Thu Jun 03 10:24:21 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_opvalue.cc: Use TEST_REL() instead of tout and TEST() with
	  an inequality.

Thu Jun 03 10:22:50 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_opvalue.cc: Convert file description to doccomment.
	  Remove unused headers and reorder remainder more standardly.

Thu Jun 03 07:44:44 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/: Implement MultiXorPostList which returns correct weights
	  for XOR of more than 2 subqueries, and drop XorPostList completely.
	  (ticket#475)
	* tests/api_anydb.cc: Add regression test xor2.

Thu Jun 03 01:30:59 GMT 2010  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* include/xapian/stem.h,languages/stem.cc: Xapian::Stem now recognises
	  "nb" and "nn" as codes for the Norwegian stemmer.
	* tests/api_stem.cc: Add feature test stem2 to check that these new
	  codes work.
	* tests/api_stem.cc: Note stem2's feature was backported to 1.0.21.

Wed Jun 02 14:09:25 GMT 2010  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* tests/api_opvalue.cc: Add tests for OP_VALUE_RANGE to get
	  coverage of the skip_to() and check() methods of
	  ValueRangePostList.
	* tests/api_opvalue.cc: Add a test to get coverage of
	  ValueGePostList::skip_to().
	* tests/api_nodb.cc,tests/api_opvalue.cc: Move test "opvaluege1"
	  from api_nodb.cc to api_opvalue.cc, and rename to valuege3 for
	  consistency with other tests of OP_VALUE_GE.